<?xml version="1.0"?>
<package format="2">
  <name>giskard_ros_utils</name>
  <version>0.0.1</version>
  <description>
    A C++ library of ROS conveniences commonly used in the giskard framework.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
